# tsai-rs

./: .gitignore  Cargo.toml  GAP_ANALYSIS.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
crates/burn_mlx/: Cargo.toml  README.md
crates/burn_mlx/src/: backend.rs  device.rs  element.rs  lib.rs
crates/burn_mlx/src/ops/: activation.rs  base.rs  bool_ops.rs  float_ops.rs  int_ops.rs  mod.rs  module.rs  module_ops.rs  numeric.rs  other_ops.rs
crates/tsai/: Cargo.toml
crates/tsai/benches/: training_bench.rs
crates/tsai/src/: lib.rs
crates/tsai/tests/: training_integration.rs
crates/tsai_analysis/: Cargo.toml
crates/tsai_analysis/src/: calibration.rs  confusion.rs  features.rs  importance.rs  lib.rs  report.rs  top_losses.rs
crates/tsai_cli/: Cargo.toml
crates/tsai_cli/src/: main.rs
crates/tsai_compute/: BENCHMARK_REPORT.md  Cargo.toml
crates/tsai_compute/benches/: device_ops.rs  simd_ops.rs
crates/tsai_compute/src/: error.rs  lib.rs
crates/tsai_compute/src/backend/: mod.rs
crates/tsai_compute/src/backend/cpu/: mod.rs  numa.rs  simd.rs
crates/tsai_compute/src/backend/cuda/: mod.rs
crates/tsai_compute/src/backend/metal/: mod.rs
crates/tsai_compute/src/backend/mlx/: mod.rs
crates/tsai_compute/src/backend/opencl/: mod.rs
crates/tsai_compute/src/backend/rocm/: mod.rs
crates/tsai_compute/src/backend/vulkan/: mod.rs
crates/tsai_compute/src/bridge/: burn.rs  mod.rs
crates/tsai_compute/src/device/: capability.rs  mod.rs  pool.rs  selector.rs
crates/tsai_compute/src/discovery/: cpu.rs  gpu.rs  mod.rs
crates/tsai_compute/src/memory/: buffer.rs  mod.rs  pool.rs  transfer.rs
crates/tsai_compute/src/scheduler/: mod.rs  workload.rs
crates/tsai_core/: Cargo.toml
crates/tsai_core/src/: error.rs  lib.rs  model_trait.rs  seed.rs  shape.rs  split.rs  tensor.rs  transform.rs
crates/tsai_data/: Cargo.toml
crates/tsai_data/src/: dataset.rs  error.rs  forecasting.rs  io.rs  lib.rs  loader.rs  sampler.rs  splits.rs  tser.rs  ucr.rs  uea.rs
crates/tsai_explain/: Cargo.toml
crates/tsai_explain/src/: activation.rs  attribution.rs  lib.rs
crates/tsai_models/: Cargo.toml
crates/tsai_models/src/: checkpoint.rs  lib.rs  registry.rs  traits.rs
crates/tsai_models/src/cnn/: fcn.rs  inception.rs  mlp.rs  mod.rs  mwdn.rs  omniscale.rs  rescnn.rs  resnet.rs  tcn.rs  xception.rs  xcm.rs  xresnet.rs
crates/tsai_models/src/hybrid/: convtran.rs  mlstm_fcn.rs  mod.rs  multi_input.rs  rnn_fcn.rs  transformer_rnn.rs
crates/tsai_models/src/rnn/: mod.rs  rnn_attention.rs  rnn_plus.rs
crates/tsai_models/src/rocket/: hydra.rs  hydra_multirocket.rs  minirocket.rs  mod.rs  multirocket.rs  rocket.rs
crates/tsai_models/src/tabular/: gated_tab_transformer.rs  mod.rs  tab_fusion.rs  tab_model.rs  tab_transformer.rs
crates/tsai_models/src/transformer/: gmlp.rs  mod.rs  patch_tst.rs  perceiver.rs  transformer.rs  ts_sequencer.rs  tsit.rs  tst.rs
crates/tsai_python/: Cargo.toml  README.md  pyproject.toml
crates/tsai_python/examples/: classification_example.py  forecasting_example.py
crates/tsai_python/src/: lib.rs
crates/tsai_train/: Cargo.toml
crates/tsai_train/src/: callback.rs  compat.rs  error.rs  evaluation.rs  export.rs  hpo.rs  learner.rs  lib.rs  losses.rs  metrics.rs  optimizer.rs  scheduler.rs  training.rs
crates/tsai_transforms/: Cargo.toml
crates/tsai_transforms/src/: augment.rs  imaging.rs  label_mix.rs  lib.rs
examples/: benchmark_ucr.rs  compare_models.rs  data_loading.rs  feature_extraction.rs  forecasting.rs  hpo.rs  mlx_tensors.rs  simple_classification.rs  sklearn_api.rs  train_ucr.rs  train_ucr_metal.rs  train_ucr_mlx.rs  ucr_inception_time.rs
nbs/: 001_export.ipynb  002_utils.ipynb  003_data.validation.ipynb  004_data.preparation.ipynb  005_data.external.ipynb  006_data.core.ipynb  007_data.unwindowed.ipynb  008_data.metadatasets.ipynb  009_data.preprocessing.ipynb  010_data.transforms.ipynb  011_data.mixed_augmentation.ipynb  012_data.image.ipynb  013_data.features.ipynb  014_data.tabular.ipynb  015_data.mixed.ipynb  016_losses.ipynb  017_metrics.ipynb  018_learner.ipynb  019_inference.ipynb  020_analysis.ipynb  021_calibration.ipynb  022_tslearner.ipynb  023_optimizer.ipynb  024_callback.core.ipynb  025_callback.experimental.ipynb  026_callback.noisy_student.ipynb  027_callback.MVP.ipynb  028_callback.PredictionDynamics.ipynb  029_models.layers.ipynb  030_models.utils.ipynb  031_models.positional_encoders.ipynb  032_models.explainability.ipynb  033_models.ResNet.ipynb  034_models.ResNetPlus.ipynb  035_models.InceptionTime.ipynb  036_models.InceptionTimePlus.ipynb  037_models.MLP.ipynb  038_models.FCN.ipynb  039_models.FCNPlus.ipynb  040_models.gMLP.ipynb  (+44 more)
tutorial_nbs/: 00_How_to_efficiently_work_with_very_large_numpy_arrays.ipynb  00b_How_to_use_numpy_arrays_in_fastai.ipynb  00c_Time_Series_data_preparation.ipynb  01_Intro_to_Time_Series_Classification.ipynb  01a_MultiClass_MultiLabel_TSClassification.ipynb  02_ROCKET_a_new_SOTA_classifier.ipynb  03_Time_Series_Transforms.ipynb  04_Intro_to_Time_Series_Regression.ipynb  05_TS_archs_comparison.ipynb  06_TS_to_image_classification.ipynb  07_Time_Series_Classification_with_Transformers.ipynb  08_Self_Supervised_TSBERT.ipynb  09_PredictionDynamics.ipynb  10_Time_Series_Classification_and_Regression_with_MiniRocket.ipynb  11_How_to_train_big_arrays_faster_with_tsai.ipynb  12_Experiment_tracking_with_W&B.ipynb  13_Hyperparameter_optimization_with_Optuna.ipynb  14_Inference_Partial_Fit_and_Fine_Tune.ipynb  15_PatchTST_a_new_transformer_for_LTSF.ipynb
tutorial_nbs/.ipynb_checkpoints/: 02_ROCKET_a_new_SOTA_classifier-checkpoint.ipynb
