[package]
name = "burn-mlx"
version = "0.1.0"
edition = "2021"
description = "MLX backend for Burn (Apple Silicon optimized)"
license = "Apache-2.0"
repository = "https://github.com/timeseriesAI/tsai-rs"
keywords = ["burn", "mlx", "apple-silicon", "machine-learning"]
categories = ["science::ml"]

[features]
default = []
# Fusion optimization (combining multiple operations)
fusion = []
# Autodiff support
autotune = []

[dependencies]
burn = { version = "0.16", default-features = false, features = ["std"] }
burn-tensor = "0.16"
mlx-rs = "0.25"
derive-new = "0.7"
half = { version = "2.4", features = ["num-traits"] }
num-traits = "0.2"

[dev-dependencies]
burn = { version = "0.16", features = ["train", "dataset"] }
serial_test = "3.2"
