[package]
name = "tsai_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for tsai-rs time series deep learning library"
authors = ["tsai-rs contributors"]
license = "Apache-2.0"
repository = "https://github.com/timeseriesAI/tsai-rs"

[lib]
name = "tsai_rs"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
# Internal crates (using path dependencies)
# Note: We disable polars-io to avoid linking conflicts with pyo3
tsai_core = { path = "../tsai_core", default-features = false, features = ["backend-ndarray"] }
tsai_data = { path = "../tsai_data", default-features = false, features = ["backend-ndarray"] }
tsai_models = { path = "../tsai_models", default-features = false, features = ["backend-ndarray"] }
tsai_train = { path = "../tsai_train", default-features = false, features = ["backend-ndarray"] }
tsai_transforms = { path = "../tsai_transforms", default-features = false }
tsai_analysis = { path = "../tsai_analysis", default-features = false }
tsai_explain = { path = "../tsai_explain", default-features = false }

# PyO3 and numpy
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Other dependencies
ndarray = "0.16"
burn = { version = "0.16", default-features = false, features = ["std", "autodiff", "ndarray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
