[package]
name = "tsai_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for tsai-rs time series deep learning library"
authors = ["tsai-rs contributors"]
license = "Apache-2.0"
repository = "https://github.com/timeseriesAI/tsai-rs"

[lib]
name = "tsai_rs"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
# Internal crates (using path dependencies)
tsai_core = { path = "../tsai_core" }
tsai_data = { path = "../tsai_data" }
tsai_models = { path = "../tsai_models" }
tsai_train = { path = "../tsai_train" }
tsai_transforms = { path = "../tsai_transforms" }
tsai_analysis = { path = "../tsai_analysis" }
tsai_explain = { path = "../tsai_explain" }

# PyO3 and numpy
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Other dependencies
ndarray = "0.16"
burn = { version = "0.16", default-features = false, features = ["std", "autodiff", "ndarray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
