[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tsai_rs"
version = "0.1.0"
description = "Python bindings for tsai-rs: Time Series AI in Rust"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "tsai-rs contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["time-series", "deep-learning", "machine-learning", "neural-network"]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/timeseriesAI/tsai-rs"
Documentation = "https://docs.rs/tsai"
Repository = "https://github.com/timeseriesAI/tsai-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
